Interpolate the purpose of covariates for event detection, #130.